--- a/PhanCongGiangDay/PhanCongGiangDay.csproj
+++ b/PhanCongGiangDay/PhanCongGiangDay.csproj
@@ -45,10 +45,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -121,6 +129,87 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataModel\BoMon.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\ChucNang.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\ChuongTrinh.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\GiangVien.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\GiangVienDay.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\GiangVienDK.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\HocPhan.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\KhoiLuongPhanCong.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\LopHoc.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\NguoiDung.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\NguoiDungVaiTro.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\NhatKyHeTHong.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\PhanCong.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\PhanCongDA.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\PhanCongGiangDay.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PhanCongGiangDay.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\PhanCongGiangDay.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\PhanCongGiangDay.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PhanCongGiangDay.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\Quyen.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\SinhVien.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\SinhVienDA.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\SinhVienDK.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\ThoiGianLopHoc.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\TrangThaiGiangVien.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\VaiTro.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataModel\VaiTroQuyen.cs">
+      <DependentUpon>PhanCongGiangDay.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -131,12 +220,29 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="DataModel\PhanCongGiangDay.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>PhanCongGiangDay.Context.cs</LastGenOutput>
+      <DependentUpon>PhanCongGiangDay.edmx</DependentUpon>
+    </Content>
+    <Content Include="DataModel\PhanCongGiangDay.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PhanCongGiangDay.edmx</DependentUpon>
+      <LastGenOutput>PhanCongGiangDay.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="DataModel\PhanCongGiangDay.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>PhanCongGiangDay.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="DataModel\PhanCongGiangDay.edmx.diagram">
+      <DependentUpon>PhanCongGiangDay.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -179,6 +285,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
